--- a/syllabus.html
+++ b/syllabus.html
@@ -11,28 +11,34 @@
     <table>
       <tbody>
         <tr>
-          <td><b>Instructor</b></td>
+          <td>
+            <b>Instructor</b>
+          </td>
           <td>Nathan Bean</td>
         </tr>
         <tr>
-          <td><b>Office</b></td>
+          <td>
+            <b>Office</b>
+          </td>
           <td>2216 Engineering Hall</td>
         </tr>
         <tr>
           <td>
-            <strong>Office Hours</strong>
+            <b>Office Hours</b>
           </td>
           <td>1:00pm-2:30pm Wednesday</td>
         </tr>
         <tr>
-          <td>Email</td>
+          <td>
+            <b>Email</b/>
+          </td>
         <td>
           <a href="mailto:nhbean@ksu.edu">nhbean@ksu.edu</a>
         </td>
       </tr>
       <tr>
         <td>
-          <b>Classroom_</b>
+          <b>Classroom</b>
         </td>
         <td>1116 Engineering Hall</td>
       </tr>
@@ -53,7 +59,6 @@
       a single technology or approach.
     </p>
 
-
     <p>
       We have a lot of ground to cover, so we
       will be moving very quickly through the
@@ -70,10 +75,11 @@
       of CMST 135 with HTML, CSS, and JavaScript.
       If you do not, I strongly recommend you take a
       (free) crash course on HTML & CSS through
-      [https://codecademy.com](https://codecademy.com)
+      <a href="https://codecademy.com">https://codecademy.com</a>
       or wait until you have taken CMST 135 before
       joining this course.
     </p>
+
 
     <h3>Course Objectives</h3>
     <p>
@@ -101,6 +107,7 @@
          </li>
        </ul>
      </p>
+
 
     <h3>Course Outline</h3>
     <p>
@@ -136,6 +143,7 @@
       </ol>
     </p>
 
+
     <h3>Course Structure</h3>
     <p>
       In recognition of the importance of hands-on
@@ -143,7 +151,7 @@
       lecture/lab format, where theoretical understanding
       is immediately put to use programming software
       drawing upon that theoretical understanding.
-      Effective learning following this strategy _depends_
+      Effective learning following this strategy <i>depends</i>
       upon active participation; accordingly it is
       necessary to both attend class and participate
       in in-class activities to succeed.
@@ -160,6 +168,7 @@
       phase will account for the equivalent of a
       letter grade.
     </p>
+
 
     <h3>Grading Breakdown</h3>
     <table>
@@ -193,6 +202,7 @@
     </tbody>
   </table>
 
+
     <h3>Resources</h3>
     <p>
       While there is not an assigned textbook
@@ -207,14 +217,19 @@
       to for obtaining starter code and
       submitting assignments.  The classroom
       can be reached here:
-      [https://classroom.github.com/classrooms/25181973-k-state-spring-17-cis-526-class](https://classroom.github.com/classrooms/25181973-k-state-spring-17-cis-526-class).
+      <a href="https://classroom.github.com/classrooms/25181973-k-state-spring-17-cis-526-class">
+        https://classroom.github.com/classrooms/25181973-k-state-spring-17-cis-526-class
+      </a>
+      .
     </p>
-
 
     <p>
       If you have not yet, I strongly encourage you
       to sign up with Github as a student:
-      [https://education.github.com/](https://education.github.com/).
+      <a href="https://education.github.com/">
+        https://education.github.com/
+      </a>
+      .
     </p>
 
 
@@ -224,28 +239,85 @@
       Online library containing over 6k current titles.
       You can access this collection using your eid and
       password here:
-      [http://proquestcombo.safaribooksonline.com.er.lib.k-state.edu](http://proquestcombo.safaribooksonline.com.er.lib.k-state.edu)
+      <a href="http://proquestcombo.safaribooksonline.com.er.lib.k-state.edu">
+        http://proquestcombo.safaribooksonline.com.er.lib.k-state.edu
+      </a>
     </p>
 
 
     <h4> Websites and Wikis</h4>
     <p>
       The following are some helpful websites for web development
-
-      __W3C Standards__ [https://www.w3.org/community/webed/wiki/Main_Page](https://www.w3.org/standards)
-
-      __W3C Web Education Community Group Wiki__ [https://www.w3.org/community/webed/wiki/Main_Page](https://www.w3.org/community/webed/wiki/Main_Page)
-
-      __Mozilla Developer Guide__ [https://developer.mozilla.org/en-US/docs/Web/Guide](https://developer.mozilla.org/en-US/docs/Web/Guide)
     </p>
 
+    <p>
+      <b>W3C Standards</b>
+      <br>
+      <a href="https://www.w3.org/standards">
+        https://www.w3.org/standards
+      </a>
+    </p>
+
+    <p>
+      <b>W3C Web Education Community Group Wiki</b>
+      <br>
+      <a href="https://www.w3.org/community/webed/wiki/Main_Page">
+         https://www.w3.org/community/webed/wiki/Main_Page
+       </a>
+     </p>
+
+     <p>
+      <b>Mozilla Developer Guide</b>
+      <br>
+      <a href="https://developer.mozilla.org/en-US/docs/Web/Guide">
+        https://developer.mozilla.org/en-US/docs/Web/Guide
+      </a>
+    </p>
+
+
     <h4>Course Software</h4>
+    <p>
+      <b>Node.js (for webserver development)</b>
+      <br>
+      <a href="https://nodejs.org/en">
+        https://nodejs.org/en
+      </a>
+      Node is a fast server-side JavaScript engine based
+      on Google's V8 JavaScript interpreter.  We will be
+      writing our webserver using Node.
+    </p>
 
-    __Node.js (for webserver development)__ [https://nodejs.org/en](https://nodejs.org/en) Node is a fast server-side JavaScript engine based on Google's V8 JavaScript interpreter.  We will be writing our webserver using Node.
+    <p>
+      <b>Atom (Integraged Development Environment)</b>
+      <br>
+      <a href="https://atom.io">
+        https://atom.io
+      </a>
+      Atom is an IDE that uses HTML5 and JavaScript
+      as its underlying technologies, which akes it
+      a natrual fit for web development.  You will
+      also want the atom-html-preview package
+      <a href="https://atom.io/packages/atom-html-preview">
+        https://atom.io/packages/atom-html-preview
+      </a>
+    </p>
 
-    __Atom (Integraged Development Environment)__ [https://atom.io](https://atom.io) Atom is an IDE that uses HTML5 and JavaScript as its underlying technologies, which akes it a natrual fit for web development.  You will also want the atom-html-preview package [https://atom.io/packages/atom-html-preview](https://atom.io/packages/atom-html-preview).
+    <p>
+      <b>Google Chrome (Web Browser)</b>
+      <br>
+      <a href="">
+        Google chrome is a fast, cross-platform web
+        browser with a robust set of developer tools.
+        See
+        <a href="https://developer.chrome.com/devtools">
+          https://developer.chrome.com/devtools
+        </a>
+        for details.  While you will always want to
+        verify your web app using all browsers, we
+        will be grading your work based on its
+        performance in Chrome.
+      </p>
 
-    __Google Chrome (Web Browser)__ https://www.google.com/chrome/browser/desktop/ Google chrome is a fast, cross-platform web browser with a robust set of developer tools.  See [https://developer.chrome.com/devtools](https://developer.chrome.com/devtools) for details.  While you will always want to verify your web app using all browsers, we will be grading your work based on its performance in Chrome.
 
     <h3>Attendance Policy</h3>
     <p>
@@ -253,10 +325,12 @@
       class participation grade by 10%.
     </p>
 
+
     <h3>Late Work</h3>
     <p>Late work (with the exception of emergencies)
       will not be accepted.
     </p>
+
 
     <h3>Subject to Change</h3>
     <p>
@@ -285,11 +359,14 @@
     <p>
       A component vital to the Honor & Integrity System is the
       inclusion of the
-      [Honor Pledge](https://www.k-state.edu/honor/honorsystem/pledge.html)
+      <a href="https://www.k-state.edu/honor/honorsystem/pledge.html">
+        Honor Pledge
+      </a>
       which applies to all assignments, examinations, or other
       course work undertaken by students. The Honor Pledge is
-      implied, _whether or not_ it is stated:
-      __"On my honor, as a student, I have neither given nor received unauthorized aid on this academic work."__
+      implied, <i>whether or not</i> it is stated:
+      <b>"On my honor, as a student, I have neither given nor
+        received unauthorized aid on this academic work."</b>
     </p>
 
     <p>
@@ -301,7 +378,10 @@
     </p>
 
     <p>
-      A [grade of XF](https://www.k-state.edu/honor/faculty/xfagree.html)
+      A
+      <a href="https://www.k-state.edu/honor/faculty/xfagree.html">
+        grade of XF
+      </a>
       can result from a breach of academic honesty.
       The F indicates failure in the course; the X
       indicates the reason is an Honor Pledge violation.
@@ -310,11 +390,13 @@
     <p>
       For more information, visit the
       Honor & Integrity System home web page at:
-      [http://www.k-state.edu/honor/](https://www.k-state.edu/honor/)
+      <a href="https://www.k-state.edu/honor/">
+        http://www.k-state.edu/honor/
+      </a>
     </p>
 
-    <h3>Students with Disabilities</h3>
 
+    <h3>Students with Disabilities</h3>
     <p>
       Students with disabilities who need classroom
       accommodations, access to technology, or
@@ -329,21 +411,29 @@
       enrolled in campus/online courses through the
       Manhattan or Olathe campuses, contact the
       Student Access Center at
-      [accesscenter@k-state.edu](mailto:accesscenter@k-state.edu),
-      785-532-6441.
+      <a href="mailto:accesscenter@k-state.edu">
+        accesscenter@k-state.edu
+      </a>
+      , 785-532-6441.
     </p>
+
 
     <h3>Classroom Conduct</h3>
     <p>
       All student activities in the University, including
       this course, are governed by the
-      (Student Judicial Conduct Code)[http://www.k-state.edu/sga/judicial/]
+      <a href="http://www.k-state.edu/sga/judicial/">
+        Student Judicial Conduct Code
+      </a>
       as outlined in the Student Governing Association
-      (By Laws)[http://www.k-state.edu/sga/old_files/sgadocs/ByLaws.pdf],
-      Article V, Section 3, number 2. Students who engage
+      <a href="http://www.k-state.edu/sga/old_files/sgadocs/ByLaws.pdf">
+        By Laws
+      </a>
+      , Article V, Section 3, number 2. Students who engage
       in behavior that disrupts the learning environment
       may be asked to leave the class.
     </p>
+
 
     <h3>Campus Safety</h3>
     <p>
@@ -355,8 +445,10 @@
       classroom and how to follow any emergency directives.
       To view additional campus emergency information go to
       the University's main page,
-      [www.k-state.edu](https://www.k-state.edu/),
-      and click on the Emergency Information button.
+      <a href="https://www.k-state.edu/">
+        www.k-state.edu
+      </a>
+      , and click on the Emergency Information button.
     </p>
 
   </body>
